Изменил стиль и текст

--- a/education.html
+++ b/education.html
@@ -84,30 +84,32 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Места обучения Маркиева Владимира</h1>
-            <h2 class="h2">2020. Повышение квалификации</h2>
-            <p>В январе 2020 года я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я сталкивался с рекламными сетями и раньше, когда совсем не так подробно. Курс помог мне разложить по полочкам понятия источников трафика, определения целевой аудитории, стоимости за клик и другие. Это было полезно. Курс помог мне понять, что профессионально заниматься настройкой таргета и рекламой в соцсетях я не хочу. Кроме того, курс дал мне идею создать свой сайт.</p>
+            <h2 class="h2">2020. Курсы и самостоятельное обучение</h2>
+            <p>В январе 2020 года я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я пробовал работать с рекламными сетями и раньше, но совсем не так подробно. Курс познакомил меня с такими понятиями как источники трафика, стоимость за клик, научил выделять целевую аудиторию. Это было полезно. После курса я понял, что профессионально заниматься настройкой таргета и рекламы в соцсетях я не хочу.</p> 
+
+            <p>Но именно благодаря курсу я захотел создать свой сайт. Сперва это был ленд на тильде, а потом стукнула пандемия, самоизоляция и самообучение. Я прошёл курс по HTML и CSS и создал первую версию этого сайта.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">2016 - 2019. Аспирантура в СПБГУ</h2>
-            <p>Ещё в школе я мечтал поступить в аспирантуру. Позже, в бакалавриате и магистратуре я думал, что стану доктором наук. Но реальность внесла свои коррективы. Во-первых, нужно было зарабатывать достаточно средств, чтобы снимать квартиру. Во-вторых, степень доктора наук меня перестала меня привлекать. Во-первых, чтобы успешно закончить аспирантуру, я должен был написать точное количество работ, качество которых никак не определялось. Во-вторых, никто бы их не стал читать. В-третьих, преподавать в университете у меня не было желания. Как здорово, что я это понял после 4 лет в педагогическом университете! Я отучился в аспирантуре три года, один из которых провёл в академическом отпуске. После этого я достиг непризывного возраста и отчислился.</p>
+            <p>Поступить в аспирантуру я планировал ещё когда учился в школе. В бакалавриате я думал, что стану доктором наук. Но реальность внесла свои коррективы. Во-первых, нужно было зарабатывать достаточно, чтобы снимать квартиру и не умереть с голоду. Во-вторых, степень доктора наук меня перестала меня привлекать. Чтобы успешно закончить аспирантуру, я должен был написать N работ. Качество работ совсем не было важно, важно было только количество. Преподавать в университете я тоже расхотел. Как здорово, что я это понял после 4 лет в педагогическом университете! Я отучился в аспирантуре три года, включая год академического отпуска, и отчислился.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">2014 - 2016. Магистратура в СПБГЭУ</h2>
-            <p>В бакалавриате я выступил на паре конференций по теме диплома под научным руководством д.ф.н. профессора Татьяны Альбертовны Клепиковой. Она же предложила мне пойти в магистратуру. Магистратура была по специальности "теория перевода и межкультурная коммуникация". Я согласился, потому что мечтал стать переводчиком со школы. Ещё больше меня привлекал переезд в Санкт-Петербург. Мне случилось попасть под эксперимент - объединение трёх университетов. ИНЖЭКОН, ГУСЭ и ФИНЭК объединялись в СПБГЭУ. Поэтому я учился в институте магистратуры внутри университета.</p>
+            <p>Я поступил в магистратуру СПБГЭУ по специальности "теория перевода и межкультурная коммуникация", которую мне порекомендовала мой научный руководитель Т. А. Клепикова. Моей радости не было предела. Наконец-то переводческая профессия! А ещё и переезд в Санкт-Петербург. Но почему-то упор делался на научную деятельность, а не на перевод. Я хотел быть переводчиком, но не очень хотел быть учёным.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">2010 - 2014. Бакалавриат в РГПУ им. А.И. Герцена (ВФ)</h2>
-            <p>Сначала я хотел поступать в Санкт-Петербург, но почти все места были заняты медалистами и льготниками. Оставшиеся места заняли отличники с 300 баллами ЕГЭ из 300 возможных. В ВФ Герцена впервые была введена трёхступенчатая ступень высшего образования - бакалавриат, магистратура и аспирантура. Я был одним из немногих, кто доучился до конца, написал дипломную работу и успешно сдал экзамены.</p>
+            <p>Я поступил в Выборг случайно. Сначала я хотел поступать в Санкт-Петербург, но у меня не было льгот и я не смог обойти победителей олимпиад. В ВФ Герцена я попал под эксперимент - первый год трёхступенчатой системы - бакалавриат, магистратура и аспирантура. Это было дивное время, я полюбил Выборг и до сих пор стараюсь приезжать почаще, чтобы погулять по улицам города.</p>
             
-            <p>Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это значит обучение английскому языку при помощи компьютерных технологий. Готовили из нас обычных филологов. Выборгский Филиал РГПУ им. А.И. Герцена навсегда остался в моей памяти как приятное время.</p>
+            <p>Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это значит обучение английскому языку при помощи компьютерных технологий. Но это только на бумаге, потому что готовили из нас обычных филологов.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">Салминская средняя школа</h2>
-            <p>Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне хорошо давались гуманитарные предметы: русский язык, английский язык, литература и очень плохо точные предметы: алгебра и геометрия. Английский язык давался мне настолько хорошо, что на каждом уроке у меня была пятёрка. К последним классам я очень сильно захотел стать переводчиком. Я даже пытался выполнить тесты бюро переводов и работать с переводческими программами. На самом деле мой уровень языка был не очень высокий. Это важный урок для меня. Теперь я понимаю, что всегда найдётся кто-то ещё лучше, ещё профессиональней и ещё опытней.</p>
+            <p>Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне плохо давались точные предметы: алгебра и геометрия, но очень хорошо давались гуманитарные предметы: русский язык, литература и английский язык. Английский язык давался мне настолько хорошо, что на каждом уроке у меня была пятёрка. Поэтому я мечтал стать переводчиком уже с 8 или 9 класса. Я даже пытался выполнить тесты в бюро переводов и работать с переводческими программами. Сейчас я понимаю, что это выглядело смешно. У меня был ещё слабый уровень языка. Теперь я понимаю это и стараюсь не зазнаваться, потому что всегда найдётся кто-то ещё более профессиональный и ещё более опытный.</p>
         </div>
 
         <div class="footer">
