--- a/experience.html
+++ b/experience.html
@@ -88,7 +88,7 @@
     <div class="main">
         <div class="content">
             <h1 class="h1">Моё резюме</h1>
-            <p>Эта страница посвящена моему опыту работы. Техническим писателем я стал не сразу, долгое время я работал переводчиком и даже успел попасть в сферу ВЭД. Если вы хотите ознакомиться с моими навыками, переходите на страницу <a href="skills.html">Навыки</a>. Примеры работ я привёл на странице <a href="cases.html">Портфолио</a>. На этой странице я постарался описать каждое место работы кратко и объективно. Вы можете быстро посмотреть любое моё место работа, нажав на ссылки ниже:</p>
+            <p>Если вы хотите ознакомиться с моими навыками, переходите на страницу <a href="skills.html">Навыки</a>. Примеры работ я привёл на странице <a href="cases.html">Портфолио</a>. Эта страница рассказывает о моём опыте работы. Техническим писателем я стал не сразу, долгое время я работал переводчиком и даже в сфере ВЭД. На этой странице я постарался описать каждое место работы кратко и объективно. Вы можете быстро посмотреть любое моё место работы, нажав на ссылки ниже:</p>
              <a href="#dec20" class="blocklink">
                     DocsVision
                 </a>
@@ -126,9 +126,9 @@
         <div class="content">
             <h2 class="h2">Непереводческий фриланс</h2>
             <div class="subheadline">Апрель 2020 - Декабрь 2020</div>
-            <p>Когда я уходил с предыдущего места работы, у меня уже было новое предложение. Но тут как раз началась пандемия и предложение пропало. Я начал активно искать новую работу. Первые несколько месяцев новых вакансий было очень мало, на мои отклики никто не реагировал. Я занимался саморазвитием, изучил HTML, CSS, создал этот сайт.
+            <p>Когда я уходил с предыдущего места работы, у меня уже было новое предложение. Но тут началась пандемия и предложение пропало. Я начал активно искать новую работу. Первые несколько месяцев новых вакансий было очень мало, на мои отклики никто не реагировал. Я решил заняться саморазвитием, изучил HTML, CSS, создал этот сайт.
             </p>
-            <p>Неожиданно со мной связался владелец сайта о переводах. Он нашёл меня через мой <a href="about.html#yt" title="Открыть в текущей вкладке">канал на YouTube</a> и  попросил написать статью по выбору переводческих CAT-инструментов. Так я начал писать технические статьи. Я сотрудничал с Selectel, писал статьи по SEO-заданию для блога. Я привёл несколько ссылок на статьи на странице <a href="cases.html" title="Открыть в текущей вкладке">Портфолио</a>.</p>
+            <p>Неожиданно со мной связался владелец сайта о переводах. Он нашёл меня через мой <a href="about.html#yt" title="Открыть в текущей вкладке">канал на YouTube</a> и попросил написать статью по выбору переводческих CAT-инструментов. Так я начал писать статьи. Я сотрудничал с Selectel, писал статьи по SEO-заданию для блога. Я привёл несколько примеров на странице <a href="cases.html" title="Открыть в текущей вкладке">Портфолио</a>.</p>
 
             <button class="accordion">Об опыте</button>
             <div class="panel">
@@ -140,8 +140,8 @@
                     <li>Писал статьи в блог по SEO-заданию.</li>
                     <li>Создавал продающие тексты, описания для магазинов приложений.</li>
                     <li>Прошёл пару образовательных курсов.</li>
-                    <li>Изучил немного HTML/CSS, исследовал веб-технологии, создал и разместил в интернете свой сайт.</li>
-                    <li>Активно искал новую должность.</li>
+                    <li>Изучил основы HTML/CSS, исследовал веб-технологии, создал и разместил в интернете свой сайт.</li>
+                    <li>Активно искал новую работу.</li>
                 </ul>
             </div>
         </div>
@@ -150,7 +150,7 @@
         <div class="content">
             <h2 class="h2">ЭРОСТ Груп</a>.</h2>
             <div class="subheadline">Февраль 2019 — апрель 2020</div>
-            <p>Я искал должность переводчика и нашёл её в маленькой компании размером чуть более 10 человек. При подписании договора оказалось, что должности переводчика нет, на самом деле это должность менеджера по ВЭД. Но на собеседовании мне говорили, что знание ВЭД второстепенно. Так я погрузился в ВЭД.</p>
+            <p>Я искал работу переводчиком и нашёл её в маленькой компании размером чуть более 10 человек. При подписании договора оказалось, что должности переводчика нет, есть только должность менеджера по ВЭД. Так я погрузился в ВЭД.</p>
 
             <button class="accordion">Об опыте</button>
             <div class="panel">
